examples/datalog/10_edge_cases/100_nested_rule_chain.dl
% Test: Deeply nested rule chain
% Expected: Chain of 5+ rules computes correctly
% Category: 10_edge_cases
% Priority: P2 - Edge cases

.kg create test_nested_chain
.kg use test_nested_chain

+base[(1,)].

step1(X, Y) :- base(X), Y = X + 1.
step2(X, Y) :- step1(X, A), Y = A + 1.
step3(X, Y) :- step2(X, A), Y = A + 1.
step4(X, Y) :- step3(X, A), Y = A + 1.
step5(X, Y) :- step4(X, A), Y = A + 1.

?- step5(X, Y).

.kg use default
.kg drop test_nested_chain
